# xtrt

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
common/: ErrorRecorder.h  buffers.h  common.h  logger.cpp  logger.h  logging.h  postprocess.cpp  postprocess.h  preprocess.cu  preprocess.cuh  safeCommon.h  sampleOptions.h  types.h  utils.h
config/: config.h
data/coco/: filelist.txt
doc/: tutorial.md
plugins/YoloLayer_TRT/: yoloPlugins.cpp
scripts/: build.sh  ccco_eval.sh  clear.sh  create_filelist.py  cudasm.sh  infer.sh  profile.sh  run.sh
tools/: create_calibdateList.py  export_trex_json.sh  modify_onnx.py
tools/deploy/infer/: yolo_det.cu  yolo_det_img.cu
tools/eval/: CMakeLists.txt  eval_coco.py  main.cpp  profile.cpp  yolo_infer.cpp  yolo_infer.h
tools/eval/debug/: draw_label.py  draw_my.py
tools/modify_onnx/: add_yoloLayer.py  modify_onnx_output_name.py  onnx_info.py  pss_onnx.sh  remove_decode.py
tools/quant/: letterbox.py  profile_onnx.py  quant_onnx.py
tools/quant/log/: nvidia-desktop_210881.1709195528479.pt.trace.json
tools/trex/: run_trex.py
weights/: yolov4_tiny_ccpd_deployable.etlt
xbuild/: build.cu  calibrator.cpp  calibrator.h
xinfer/: yolo_det.cu  yolo_det_img.cu
